Update: solution file update.

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@ SolutionTest_C++.opensdf
 SolutionTest_C++.sdf
 *.sdf
 SolutionTest_C++.sdf
+/160214_TestCodility_03/Debug/*.idb
+/Debug
+/160211_TestCodility_01/Debug/*.idb
