--- a/160324_TestCodingame/160324_TestCodingame.vcxproj.filters
+++ b/160324_TestCodingame/160324_TestCodingame.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClInclude Include="SkynetStrikesBack.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="TheRiverI.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
