--- a/160324_TestCodingame/160324_TestCodingame.vcxproj
+++ b/160324_TestCodingame/160324_TestCodingame.vcxproj
@@ -85,6 +85,7 @@
     <ClInclude Include="ChuckNorris.h" />
     <ClInclude Include="HeatDetector.h" />
     <ClInclude Include="LinkedList.h" />
+    <ClInclude Include="Skynet2.h" />
     <ClInclude Include="SkynetStrikesBack.h" />
     <ClInclude Include="TheParanoidAndroid.h" />
     <ClInclude Include="SkynetTheVirus.h" />
