vs2017 + add test ps

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,18 @@ SolutionTest_C++.sdf
 /160214_TestCodility_03/Debug/*.idb
 /Debug
 /160211_TestCodility_01/Debug/*.idb
+.vs/SolutionTest_C++/v15/ipch/AutoPCH/1fb0e60c14d51aa3/THERIVERI.ipch
+.vs/SolutionTest_C++/v15/ipch/AutoPCH/2765b61637ac1621/MAIN.ipch
+.vs/SolutionTest_C++/v15/ipch/AutoPCH/5f47839cf5a10afd/SKYNET2.ipch
+.vs/SolutionTest_C++/v15/ipch/AutoPCH/840bc31b72eb2e06/HEADER.ipch
+.vs/SolutionTest_C++/v15/.suo
+.vs/SolutionTest_C++/v15/Browse.VC.db
+.vs/SolutionTest_C++/v15/Browse.VC.opendb
+.vs/SolutionTest_C++/v15/Solution.VC.db
+.vs/SolutionTest_C++/v15/Solution.VC.db-shm
+.vs/SolutionTest_C++/v15/Solution.VC.db-wal
+*.ipch
+*.config
+*.exe
+*.idb
+*.user
