--- a/200316_TestProgrammers/200316_TestProgrammers.vcxproj.filters
+++ b/200316_TestProgrammers/200316_TestProgrammers.vcxproj.filters
@@ -22,4 +22,9 @@
       <Filter>Header Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Test01Farthest.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
