--- a/200316_TestProgrammers/200316_TestProgrammers.vcxproj
+++ b/200316_TestProgrammers/200316_TestProgrammers.vcxproj
@@ -154,6 +154,9 @@
     <ClCompile Include="200316_TestProgrammers.cpp" />
     <ClCompile Include="Test01Fold.h" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Test01Farthest.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
