Add test coding "programmers.com"
프로그래머스 연습 문제

--- a/200316_TestProgrammers/200316_TestProgrammers.vcxproj
+++ b/200316_TestProgrammers/200316_TestProgrammers.vcxproj
@@ -153,9 +153,11 @@
   <ItemGroup>
     <ClCompile Include="200316_TestProgrammers.cpp" />
     <ClCompile Include="Test01Fold.h" />
+    <ClCompile Include="Test201205_01.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Test01Farthest.h" />
+    <ClInclude Include="Test201205_01.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
