--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@ SolutionTest_C++.sdf
 *.db-wal
 *.opendb
 .vs/SolutionTest_C++/v16/.suo
+160324_TestCodingame/Debug/160324_TestCodingame.exe.recipe
