--- a/160324_TestCodingame/160324_TestCodingame.vcxproj.filters
+++ b/160324_TestCodingame/160324_TestCodingame.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClInclude Include="Skynet2.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="BruceLee.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
