--- a/160324_TestCodingame/160324_TestCodingame.vcxproj
+++ b/160324_TestCodingame/160324_TestCodingame.vcxproj
@@ -86,10 +86,15 @@
     <ClInclude Include="ChuckNorris.h" />
     <ClInclude Include="HeatDetector.h" />
     <ClInclude Include="LinkedList.h" />
+    <ClInclude Include="MagicCountOfNumbers.h" />
+    <ClInclude Include="ShadowOfTheKnight1.h" />
     <ClInclude Include="Skynet2.h" />
     <ClInclude Include="SkynetStrikesBack.h" />
+    <ClInclude Include="StallTilt.h" />
+    <ClInclude Include="SudokuValidator.h" />
     <ClInclude Include="TheParanoidAndroid.h" />
     <ClInclude Include="SkynetTheVirus.h" />
+    <ClInclude Include="ThereIsNoSpoon1.h" />
     <ClInclude Include="TheRiverI.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
