memory leak finder test on

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ SolutionTest_C++.sdf
 *.opendb
 .vs/SolutionTest_C++/v16/.suo
 160324_TestCodingame/Debug/160324_TestCodingame.exe.recipe
+*.recipe
