--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ SolutionTest_C++.sdf
 .vs/SolutionTest_C++/v16/.suo
 160324_TestCodingame/Debug/160324_TestCodingame.exe.recipe
 *.recipe
+220515_TestHackerRank/Debug/220515_TestHackerRank.vcxproj.FileListAbsolute.txt
