Add c++ sort test

--- a/160324_TestCodingame/160324_TestCodingame.vcxproj.filters
+++ b/160324_TestCodingame/160324_TestCodingame.vcxproj.filters
@@ -63,4 +63,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="AStarExercise.h">
+      <Filter>Header Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
